--- a/app/globals.css
+++ b/app/globals.css
@@ -40,6 +40,28 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
+/* width */
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: #909090;
+	border-radius: 5px;
+	height: 25px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: #555;
+}
+
 main {
 	width: 100%;
 }
@@ -118,6 +140,7 @@ h2 {
 	.copy,
 	.digitization-page,
 	.banner-promotion,
+	.resume-page,
 	.team-page {
 		padding-top: 5em;
 		padding-bottom: 4em;
@@ -127,8 +150,7 @@ h2 {
 }
 
 /* Desktop & Up */
-@media (min-width: 900px) {
-}
+@media (min-width: 900px) {}
 
 /* Tailwind Utilities */
 @layer utilities {
@@ -218,6 +240,15 @@ h2 {
 
 	.opacity-filter {
 		background-color: black;
+	}
+
+	.rounded {
+		border-radius: 0.5rem;
+	}
+
+	.navbar {
+		box-shadow: -7px 7px 13px #1d1d1d,
+			7px -7px 13px #272727;
 	}
 
 	.nav-links {
@@ -332,7 +363,45 @@ h2 {
 		height: 500px;
 	}
 
+	.avatar {
+		height: 175px;
+		width: 175px;
+	}
+
+	.table-shadow {
+		box-shadow: 8px 9px 27px -9px #000,
+			0px 8px 16px -8px #222;
+	}
+
 	.card-content {
-		min-height: 200px;
+		min-height: 250px;
+	}
+
+	@media (min-width: 767px) {
+		.cards svg {
+			max-width: 25px;
+		}
+
+		.card-title {
+			min-height: 75px;
+		}
+
+		.card-price {
+			min-height: 40px;
+		}
+
+		.card-content {
+			min-height: 400px;
+		}
+	}
+
+	@media (min-width: 1100px) {
+		.card-content {
+			min-height: 300px;
+		}
+
+		.card-title {
+			min-height: 50px;
+		}
 	}
 }
