--- a/app/globals.css
+++ b/app/globals.css
@@ -373,6 +373,18 @@ h2 {
 			0px 8px 16px -8px #222;
 	}
 
+	.avatar-shadow {
+		box-shadow: 0px 13px 27px -5px #000,
+			0px 8px 16px -8px #222;
+	}
+
+	.job-logo {
+		height: 20px !important;
+		width: 20px !important;
+		margin-top: auto;
+		margin-bottom: auto;
+	}
+
 	.card-content {
 		min-height: 250px;
 	}
