--- a/app/globals.css
+++ b/app/globals.css
@@ -150,7 +150,8 @@ h2 {
 }
 
 /* Desktop & Up */
-@media (min-width: 900px) {}
+@media (min-width: 900px) {
+}
 
 /* Tailwind Utilities */
 @layer utilities {
@@ -247,8 +248,7 @@ h2 {
 	}
 
 	.navbar {
-		box-shadow: -7px 7px 13px #1d1d1d,
-			7px -7px 13px #272727;
+		box-shadow: -7px 7px 13px #1d1d1d, 7px -7px 13px #272727;
 	}
 
 	.nav-links {
@@ -368,19 +368,29 @@ h2 {
 		width: 175px;
 	}
 
+	.skill {
+		height: 75px;
+		width: 75px;
+	}
+
 	.table-shadow {
-		box-shadow: 8px 9px 27px -9px #000,
-			0px 8px 16px -8px #222;
+		box-shadow: 8px 9px 27px -9px #000, 0px 8px 16px -8px #222;
 	}
 
 	.avatar-shadow {
-		box-shadow: 0px 13px 27px -5px #000,
-			0px 8px 16px -8px #222;
+		box-shadow: 0px 13px 27px -5px #000, 0px 8px 16px -8px #222;
 	}
 
 	.job-logo {
 		height: 20px !important;
 		width: 20px !important;
+		margin-top: auto;
+		margin-bottom: auto;
+	}
+
+	.education-logo {
+		height: auto !important;
+		width: 50px !important;
 		margin-top: auto;
 		margin-bottom: auto;
 	}
