--- a/app/globals.css
+++ b/app/globals.css
@@ -360,7 +360,11 @@ h2 {
 	}
 
 	.comparison-slider {
-		height: 500px;
+		height: 700px;
+	}
+
+	.slider-image-override {
+		object-position: top !important;
 	}
 
 	.avatar {
