--- a/app/globals.css
+++ b/app/globals.css
@@ -157,7 +157,8 @@ h2 {
 }
 
 /* Desktop & Up */
-@media (min-width: 900px) {}
+@media (min-width: 900px) {
+}
 
 /* Tailwind Utilities */
 @layer utilities {
@@ -370,7 +371,7 @@ h2 {
 	}
 
 	.comparison-slider {
-		height: 700px;
+		height: 500px;
 	}
 
 	.slider-image-override {
@@ -393,6 +394,13 @@ h2 {
 
 	.avatar-shadow {
 		box-shadow: 0px 13px 27px -5px #000, 0px 8px 16px -8px #222;
+	}
+
+	.infrared-photo {
+		background-size: cover;
+		background-position: center;
+		height: auto;
+		width: 500px;
 	}
 
 	.job-logo {
@@ -428,6 +436,10 @@ h2 {
 
 		.card-content {
 			min-height: 400px;
+		}
+
+		.comparison-slider {
+			height: 700px;
 		}
 	}
 
