--- a/app/globals.css
+++ b/app/globals.css
@@ -274,6 +274,13 @@ h2 {
 		border-radius: 0.5rem;
 	}
 
+	.visual-list-item-icon-alternative {
+		height: 20px;
+		width: 35px;
+		margin-top: 2px;
+		margin-right: 0;
+	}
+
 	.navbar {
 		box-shadow: -7px 7px 13px #1d1d1d, 7px -7px 13px #272727;
 	}
